# zalevaci-nadrz

./: .envrc  .gitignore  CMakeLists.txt  README.md
components/config_webapp/: config_webapp.cpp  config_webapp.h
ha/: docker-compose.yml
ha/homeassistant/: configuration.yaml
main/: CMakeLists.txt  app-config.cpp  app-config.h  blikaniled.c  blikaniled.h  flash_monotonic_counter.cpp  flash_monotonic_counter.h  hladina-demo.c  hladina-demo.cpp  hladina-demo.h  idf_component.yml  lcd-demo.c  lcd-demo.h  lcd.c  lcd.cpp  lcd.h  pins.h  prutokomer-demo.c  prutokomer-demo.cpp  prutokomer-demo.h  prutokomer.cpp  restart_info.cpp  restart_info.h  sensor_dispatch.cpp  sensor_dispatch.h  sensor_events.cpp  sensor_events.h  state_manager.cpp  state_manager.h  teplota-demo.c  teplota-demo.cpp  teplota-demo.h  trimmed_mean.hpp  wifi_init.cpp  wifi_init.h  zalevaci-nadrz.c  zalevaci-nadrz.cpp
